--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
          class="button__icon" 
          viewBox="0 0 40 40"
          xmlns="http://www.w3.org/2000/svg">
-           <use href="./svg/floppy.svg#floppy"></use>
+           <use href="./svg/icon.svg#floppy"></use>
         </svg>
         <span class="button__text">Сохранить на память</span>
       </button>
@@ -582,7 +582,7 @@
         class="modal__icon" 
         viewBox="0 0 40 40" 
         xmlns="http://www.w3.org/2000/svg">
-         <use href="./svg/floppy.svg#floppy"></use>
+         <use href="./svg/icon.svg#floppy"></use>
         </svg>
         <p>Вставьте дискету,чтобы продолжить</p>
       </div>
