исправлены замечания ревью

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Закрывающий тег</title>
-    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" sizes="any" />
+    <link
+      rel="icon"
+      href="./images/favicon.ico"
+      type="image/x-icon"
+      sizes="any"
+    />
     <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="./images/favicon.png" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
@@ -16,7 +21,7 @@
   <body class="page">
     <header class="page__header card">
       <h1 class="page__header__title">&lt;/HTML&gt;</h1>
-      <h2 class="page__header__subtitle">закрывающий тег</h2>
+      <p class="page__header__subtitle">закрывающий тег</p>
     </header>
     <main class="main">
       <ul class="cards-list">
@@ -29,11 +34,7 @@
             </header>
             <div class="card__img-wrapper">
               <span class="card__img-label">&lt;/HTML&gt;</span>
-              <img
-                class="card__img"
-                src="./images/image.png"
-                alt="Машина"
-              />
+              <img class="card__img" src="./images/image.png" alt="Машина" />
             </div>
             <div class="card__content">
               <p>
@@ -47,7 +48,8 @@
               <button
                 aria-labelledby="article_1_like_button"
                 type="button"
-                class="card__icon-button">
+                class="card__icon-button"
+              >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 39 36"
@@ -103,11 +105,14 @@
             </div>
             <div class="card__content">
               <p>
-                На первых этапах мы работали со страхами и сомнениями, которые часто испытывают новички. Один из них — страх перед чистым листом. Это, конечно же, намного сложнее, чем боязнь куска бумаги. Часто за этим ощущением скрываются более глубокие вопросы: с чего начать? а вдруг будет слишком сложно? что, если я не справлюсь?
+                На первых этапах мы работали со страхами и сомнениями, которые
+                часто испытывают новички. Один из них — страх перед чистым
+                листом. Это, конечно же, намного сложнее, чем боязнь куска
+                бумаги. Часто за этим ощущением скрываются более глубокие
+                вопросы: с чего начать? а вдруг будет слишком сложно? что, если
+                я не справлюсь?
               </p>
-              <p>
-                Место для ваших воспоминаний о начале первого спринта.
-              </p>
+              <p>Место для ваших воспоминаний о начале первого спринта.</p>
             </div>
             <footer class="card__footer">
               <button
@@ -170,7 +175,9 @@
             </div>
             <div class="card__content">
               <p>
-                Первый проект — позади! Но это всё ещё самое начало пути. Радость могла быстро померкнуть и смениться ожиданием провала. Или вы, наоборот, могли вдохновиться успехами и поверить в себя.
+                Первый проект — позади! Но это всё ещё самое начало пути.
+                Радость могла быстро померкнуть и смениться ожиданием провала.
+                Или вы, наоборот, могли вдохновиться успехами и поверить в себя.
               </p>
               <p>Место для ваших воспоминаний об окончании первого спринта.</p>
             </div>
@@ -235,11 +242,13 @@
             </div>
             <div class="card__content">
               <p>
-                На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как много ещё впереди. Вы могли попытаться погнаться за идеалом и понять, что он недостижим. А, может, вы вовсе и не подвержены перфекционизму и вместо того, чтобы сделать идеально, старались просто сделать.
+                На этом этапе вы уже достаточно разбирались в основах вёрстки,
+                чтобы понять, как много ещё впереди. Вы могли попытаться
+                погнаться за идеалом и понять, что он недостижим. А, может, вы
+                вовсе и не подвержены перфекционизму и вместо того, чтобы
+                сделать идеально, старались просто сделать.
               </p>
-              <p>
-                Место для ваших воспоминаний о начале второго спринта.
-              </p>
+              <p>Место для ваших воспоминаний о начале второго спринта.</p>
             </div>
             <footer class="card__footer">
               <button
@@ -302,11 +311,14 @@
             </div>
             <div class="card__content">
               <p>
-                Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, что одни против целого мира). Вас окружали одногруппники, команда сопровождения и просто близкие люди, которым можно пожаловаться, если очередной макет просто так не поддавался. Осваивать что-то новое легче, когда рядом есть единомышленники, не правда ли?
+                Всё это время вы были не одиноки (хотя, возможно, иногда и
+                чувствовали, что одни против целого мира). Вас окружали
+                одногруппники, команда сопровождения и просто близкие люди,
+                которым можно пожаловаться, если очередной макет просто так не
+                поддавался. Осваивать что-то новое легче, когда рядом есть
+                единомышленники, не правда ли?
               </p>
-              <p>
-                Место для ваших воспоминаний об окончании второго спринта.
-              </p>
+              <p>Место для ваших воспоминаний об окончании второго спринта.</p>
             </div>
             <footer class="card__footer">
               <button
@@ -369,11 +381,11 @@
             </div>
             <div class="card__content">
               <p>
-                На этом курсе вы постоянно решали разные задачи. В какой-то момент вам могло показаться, что решения просто иссякли. Значит, пришло время посмотреть на задачу под другим углом.
+                На этом курсе вы постоянно решали разные задачи. В какой-то
+                момент вам могло показаться, что решения просто иссякли. Значит,
+                пришло время посмотреть на задачу под другим углом.
               </p>
-              <p>
-                Место для ваших воспоминаний о начале третьего спринта.
-              </p>
+              <p>Место для ваших воспоминаний о начале третьего спринта.</p>
             </div>
             <footer class="card__footer">
               <button
@@ -436,11 +448,13 @@
             </div>
             <div class="card__content">
               <p>
-                Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. Вроде и проектную пора сдавать, и задачи хочется порешать, и в теории получше разобраться, и жизнь не забыть пожить. В такие моменты очень нужна концентрация. Вспомните, откуда вы её черпали.
+                Во время учёбы часто возникает чувство, когда не знаешь, за что
+                хвататься. Вроде и проектную пора сдавать, и задачи хочется
+                порешать, и в теории получше разобраться, и жизнь не забыть
+                пожить. В такие моменты очень нужна концентрация. Вспомните,
+                откуда вы её черпали.
               </p>
-              <p>
-                Место для ваших воспоминаний о начале третьего спринта.
-              </p>
+              <p>Место для ваших воспоминаний о начале третьего спринта.</p>
             </div>
             <footer class="card__footer">
               <button
@@ -511,7 +525,8 @@
                 процесс познания. Ведь часто путь — и есть результат.
               </p>
               <p>
-                Место, чтобы остановиться, подумать и написать, что вы чувствуете в этой точке пути.
+                Место, чтобы остановиться, подумать и написать, что вы
+                чувствуете в этой точке пути.
               </p>
             </div>
             <footer class="card__footer">
@@ -567,22 +582,24 @@
         aria-controls="modal"
         class="button button--save"
       >
-        <svg 
-         class="button__icon" 
-         viewBox="0 0 40 40"
-         xmlns="http://www.w3.org/2000/svg">
-           <use href="./svg/icon.svg#floppy"></use>
+        <svg
+          class="button__icon"
+          viewBox="0 0 40 40"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <use href="./svg/icon.svg#floppy"></use>
         </svg>
         <span class="button__text">Сохранить на память</span>
       </button>
     </main>
     <dialog class="modal" id="modal">
       <div class="modal__content">
-        <svg 
-        class="modal__icon" 
-        viewBox="0 0 40 40" 
-        xmlns="http://www.w3.org/2000/svg">
-         <use href="./svg/icon.svg#floppy"></use>
+        <svg
+          class="modal__icon"
+          viewBox="0 0 40 40"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <use href="./svg/icon.svg#floppy"></use>
         </svg>
         <p>Вставьте дискету,чтобы продолжить</p>
       </div>
@@ -595,6 +612,3 @@
     <script src="./scripts/like.js"></script>
   </body>
 </html>
-
-
-     
